package com.example.coursework12;

public interface ChangeNumberItemListener {
    void changed();
}
